// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetricQueryBuilder snapshot: sort queries matches snapshot for a day-of-week-name sort query 1`] = `
"WITH
  metrics AS (
    SELECT
      "table1".dim1 AS "table1_dim1",
      MAX("table1".number_column) AS "table1_metric1"
    FROM
      "db"."schema"."table1" AS "table1"
    GROUP BY
      1
  )
SELECT
  *
FROM
  metrics
ORDER BY
  (
    CASE
      WHEN "table1_dim1" = 'Sunday' THEN 1
      WHEN "table1_dim1" = 'Monday' THEN 2
      WHEN "table1_dim1" = 'Tuesday' THEN 3
      WHEN "table1_dim1" = 'Wednesday' THEN 4
      WHEN "table1_dim1" = 'Thursday' THEN 5
      WHEN "table1_dim1" = 'Friday' THEN 6
      WHEN "table1_dim1" = 'Saturday' THEN 7
      ELSE 0
    END
  ) DESC
LIMIT
  10"
`;

exports[`MetricQueryBuilder snapshot: sort queries matches snapshot for a month-name sort query 1`] = `
"WITH
  metrics AS (
    SELECT
      "table1".dim1 AS "table1_dim1",
      MAX("table1".number_column) AS "table1_metric1"
    FROM
      "db"."schema"."table1" AS "table1"
    GROUP BY
      1
  )
SELECT
  *
FROM
  metrics
ORDER BY
  (
    CASE
      WHEN "table1_dim1" = 'January' THEN 1
      WHEN "table1_dim1" = 'February' THEN 2
      WHEN "table1_dim1" = 'March' THEN 3
      WHEN "table1_dim1" = 'April' THEN 4
      WHEN "table1_dim1" = 'May' THEN 5
      WHEN "table1_dim1" = 'June' THEN 6
      WHEN "table1_dim1" = 'July' THEN 7
      WHEN "table1_dim1" = 'August' THEN 8
      WHEN "table1_dim1" = 'September' THEN 9
      WHEN "table1_dim1" = 'October' THEN 10
      WHEN "table1_dim1" = 'November' THEN 11
      WHEN "table1_dim1" = 'December' THEN 12
      ELSE 0
    END
  ) DESC
LIMIT
  10"
`;
